--- a/tutorial-two-original-files/Makefile
+++ b/tutorial-two-original-files/Makefile
@@ -20,14 +20,26 @@ floppy_image: $(BUILD_DIR)/main_floppy.img
 $(BUILD_DIR)/main_floppy.img: bootloader kernel
 	dd if=/dev/zero of=$(BUILD_DIR)/main_floppy.img bs=512 count=2880
 	hdiutil attach -nomount $(BUILD_DIR)/main_floppy.img
-	newfs_msdos -F 12 -f 2880 -v NBOS disk3
-	hdiutil detach disk3
+	newfs_msdos -F 12 -f 2880 -v NBOS disk2
+	hdiutil detach disk2
 	dd if=$(BUILD_DIR)/bootloader.bin of=$(BUILD_DIR)/main_floppy.img conv=notrunc
 	mcopy -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/kernel.bin "::kernel.bin"
 	mcopy -i $(BUILD_DIR)/main_floppy.img test.txt "::test.txt"
 
   # _________________________________________
   # Run mdir -i build/main_floppy.img after the build to check if the disc contains the kernel.
+
+	# _________________________________________
+	# FLOPPY IMAGE CREATION FROM TUTORIAL TWO:
+	# dd if=/dev/zero of=$(BUILD_DIR)/main_floppy.img bs=512 count=2880
+	# mkfs.fat -F 12 -n "NBOS" $(BUILD_DIR)/main_floppy.img
+	# dd if=$(BUILD_DIR)/bootloader.bin of=$(BUILD_DIR)/main_floppy.img conv=notrunc
+	# mcopy -i $(BUILD_DIR)/main_floppy.img $(BUILD_DIR)/kernel.bin "::kernel.bin"
+
+	# _________________________________________
+	# FLOPPY IMAGE CREATION FROM TUTORIAL ONE:
+	# cp $(BUILD_DIR)/main.bin $(BUILD_DIR)/main_floppy.img
+	# truncate -s 1440k $(BUILD_DIR)/main_floppy.img
 
 # _________________________________________
 # BOOTLOADER
